--- a/Ch02/kNN.csproj
+++ b/Ch02/kNN.csproj
@@ -136,6 +136,8 @@
     <Content Include="datingTestSet2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="ScreenShots\Dating classifier test results.png" />
+    <Resource Include="ScreenShots\Frequent Flyer Miles vs. Video Game Time Scatter Plot.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
