Cleanup scatter plots &  handwritten digits example

--- a/Ch02/kNN.Tests/kNN.Tests.csproj
+++ b/Ch02/kNN.Tests/kNN.Tests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="KNNClassifierTests.cs" />
     <Compile Include="MatrixHelpersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
