--- a/Ch02/kNN.csproj
+++ b/Ch02/kNN.csproj
@@ -67,22 +67,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DatingClassifierTest.xaml.cs">
-      <DependentUpon>DatingClassifierTest.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="DatingClassifierTestModel.cs" />
-    <Compile Include="FileLoader.cs" />
+    <Compile Include="File2Matrix.cs" />
+    <Compile Include="Image2Vector.cs" />
     <Compile Include="KNNClassifier.cs" />
-    <Compile Include="MainWindowModel.cs" />
     <Compile Include="MatrixHelpers.cs" />
-    <Compile Include="ScatterPlot.xaml.cs">
-      <DependentUpon>ScatterPlot.xaml</DependentUpon>
+    <Compile Include="ViewModels\PercentVideoGameVsIceCreamPerYearScatterPlotModel.cs" />
+    <Compile Include="ViewModels\FreqFlyerVsPercentVideoGameScatterPlotModel.cs" />
+    <Compile Include="Views\FreqFlyerVsPercentVideoGameScatterPlot.xaml.cs">
+      <DependentUpon>FreqFlyerVsPercentVideoGameScatterPlot.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ScatterPlotModel.cs" />
-    <Page Include="DatingClassifierTest.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
+    <Compile Include="Views\PercentVideoGameVsIceCreamPerYearScatterPlot.xaml.cs">
+      <DependentUpon>PercentVideoGameVsIceCreamPerYearScatterPlot.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,7 +91,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="ScatterPlot.xaml">
+    <Page Include="Views\FreqFlyerVsPercentVideoGameScatterPlot.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PercentVideoGameVsIceCreamPerYearScatterPlot.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -139,6 +139,7 @@
     <Resource Include="ScreenShots\Dating classifier test results.png" />
     <Resource Include="ScreenShots\Frequent Flyer Miles vs. Video Game Time Scatter Plot.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
